--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -129,6 +129,17 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="card rounded-0 p-0 shadow-sm">
+                        <img src="https://raw.githubusercontent.com/dan-koller/Spring-Code-Sharing-Platform/main/img.png"
+                             class="card-img-top rounded-0" alt="Angular pro sidebar">
+                        <div class="card-body text-center">
+                            <h6 class="card-title">Code Sharing Platform</h6>
+                            <a href="https://github.com/dan-koller/Spring-Code-Sharing-Platform" target="_blank"
+                               class="btn btn-primary btn-sm">Github</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="card rounded-0 p-0 shadow-sm">
                         <img src="https://dan-koller.github.io/src/images/api-coding.jpg"
                              class="card-img-top rounded-0" alt="Angular pro sidebar">
                         <div class="card-body text-center">
@@ -140,11 +151,11 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="card rounded-0 p-0 shadow-sm">
-                        <img src="https://raw.githubusercontent.com/dan-koller/Spring-Code-Sharing-Platform/main/img.png"
+                        <img src="https://raw.githubusercontent.com/dan-koller/Flask-Weather-App/main/res/weather-app-screenshot.png"
                              class="card-img-top rounded-0" alt="Angular pro sidebar">
                         <div class="card-body text-center">
-                            <h6 class="card-title">Code Sharing Platform</h6>
-                            <a href="https://github.com/dan-koller/Spring-Code-Sharing-Platform" target="_blank"
+                            <h6 class="card-title">Weather app</h6>
+                            <a href="https://github.com/dan-koller/Flask-Weather-App" target="_blank"
                                class="btn btn-primary btn-sm">Github</a>
                         </div>
                     </div>
@@ -171,9 +182,9 @@
 </div>
 
 <!--Custom scripts-->
-<script type="text/javascript" th:src="@{../scripts/sendObject.js}"></script>
-<script type="text/javascript" th:src="@{../scripts/handleSideBar.js}"></script>
-<script type="text/javascript" th:src="@{../scripts/footerText.js}"></script>
+<script type="text/javascript" th:src="@{../scripts/signup-new-user.js}"></script>
+<script type="text/javascript" th:src="@{../scripts/handle-side-bar.js}"></script>
+<script type="text/javascript" th:src="@{../scripts/set-footer-text.js}"></script>
 
 </body>
 </html>
