--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -16,7 +16,7 @@
 <body>
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="#" class="navbar-brand"><b>Anti Fraud System</b></a>
+    <a href="/web/" class="navbar-brand"><b>Anti Fraud System</b></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="user-info">
                     <!--TODO: Update user name and role according to the currently logged in admin user-->
-                    <span class="user-name" id="admin-name">John <strong>Doe</strong></span>
+                    <span class="user-name">John <strong>Doe</strong></span>
                     <span class="user-role">Administrator</span>
                     <span class="user-status">
             <i class="fa fa-circle"></i>
@@ -157,7 +157,7 @@
                     <li class="sidebar-dropdown">
                         <a href="#">
                             <i class="fa fa-shopping-cart"></i>
-                            <span>Manage users</span>
+                            <span>Tasks</span>
                         </a>
                         <div class="sidebar-submenu">
                             <ul>
@@ -271,13 +271,13 @@
                     </div>
                 </div>
                 <div class="form-group col-md-12">
-                    <p id="admin-greeting">Hello there!</p>
-                    <p>What are you going to do?</p>
+                    <p id="user-greeting">Hello there!</p>
+                    <p>What would you like to do?</p>
                     <ul>
                         <!--TODO: Update hrefs to link to the correct site-->
                         <li><a href="#">Add a new user</a></li>
                         <li><a href="#">Remove an existing user</a></li>
-                        <li><a href="#">View the list of active users</a></li>
+                        <li><a href="#">View a list of active users</a></li>
                         <li><a href="#">Update the role of an existing user</a></li>
                         <li><a href="#">Update the access level of an existing user</a></li>
                     </ul>
@@ -299,11 +299,11 @@
 </div>
 
 <!--Custom scripts-->
-<script type="text/javascript" th:src="@{/scripts/sendObject.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/handleSideBar.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/footerText.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
 
-<script type="text/javascript" th:src="@{/scripts/admin/admin-greeting.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 
 </body>
 </html>
