--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -53,8 +53,10 @@
                     <form action="/web/success" method="post">
                         <p class="hint-text">Sign in with your social media account</p>
                         <div class="form-group social-btn clearfix">
-                            <a href="#" class="btn btn-secondary facebook-btn float-left"><i class="fa fa-facebook"></i> Facebook</a>
-                            <a href="#" class="btn btn-secondary twitter-btn float-right"><i class="fa fa-twitter"></i> Twitter</a>
+                            <a href="#" class="btn btn-secondary facebook-btn float-left"><i class="fa fa-facebook"></i>
+                                Facebook</a>
+                            <a href="#" class="btn btn-secondary twitter-btn float-right"><i class="fa fa-twitter"></i>
+                                Twitter</a>
                         </div>
                         <div class="or-seperator"><b>or</b></div>
                         <div class="form-group">
@@ -71,24 +73,30 @@
                 </div>
             </div>
             <div class="nav-item dropdown">
-                <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="false">Sign up</a>
+                <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn"
+                   aria-expanded="false">Sign up</a>
                 <div class="dropdown-menu action-form">
                     <form action="/web/success" method="post">
                         <p class="hint-text">Fill in this form to create your account!</p>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="name" placeholder="Your name" required="required">
+                            <input type="text" class="form-control" id="name" placeholder="Your name"
+                                   required="required">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="username" placeholder="Username" required="required">
+                            <input type="text" class="form-control" id="username" placeholder="Username"
+                                   required="required">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="password" placeholder="Password" required="required">
+                            <input type="password" class="form-control" id="password" placeholder="Password"
+                                   required="required">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="confirm_password" placeholder="Confirm Password" required="required">
+                            <input type="password" class="form-control" id="confirm_password"
+                                   placeholder="Confirm Password" required="required">
                         </div>
                         <div class="form-group">
-                            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms &amp; Conditions</a></label>
+                            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a
+                                    href="#">Terms &amp; Conditions</a></label>
                         </div>
                         <input type="submit" class="btn btn-primary btn-block" value="Sign up" onclick=send()>
                     </form>
@@ -105,12 +113,32 @@
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
-                    <p>This project demonstrates (in a simplified form) the principles of anti-fraud systems in the
-                        financial sector. For this project, we will work on a system with an expanded role model, a set
-                        of REST endpoints responsible for interacting with users, and an internal transaction validation
-                        logic based on a set of heuristic rules.</p>
-                    <p> You can find the complete code on
-                        <a href="https://github.com/dan-koller/Spring-Anti-Fraud-System" target="_blank">Github</a>.</p>
+                    <p>Contact us via the form below and we reach out to you as soon as possible.</p>
+                    <form action="#" method="post">
+                        <div class="form-group">
+                            <label for="contact-name">Name</label>
+                            <input type="text" class="form-control" id="contact-name" name="name" placeholder="Name"
+                                   required="required">
+                        </div>
+                        <div class="form-group">
+                            <label for="contact-email">Email</label>
+                            <input type="email" class="form-control" id="contact-email" name="email" placeholder="Email"
+                                   required="required">
+                        </div>
+                        <div class="form-group">
+                            <label for="contact-subject">Subject</label>
+                            <input type="text" class="form-control" id="contact-subject" name="subject"
+                                   placeholder="Subject" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label for="contact-message">Message</label>
+                            <textarea name="message" id="contact-message" class="form-control" rows="5"
+                                      placeholder="Message" required="required"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary" id="btnContactUs">Send Message</button>
+                        </div>
+                    </form>
                 </div>
                 <div class="form-group col-md-12">
                     <div class="alert alert-success" role="alert">
@@ -124,45 +152,7 @@
 
                 </div>
             </div>
-            <h5>More projects</h5>
             <hr>
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="card rounded-0 p-0 shadow-sm">
-                        <img src="https://raw.githubusercontent.com/dan-koller/Spring-Code-Sharing-Platform/main/img.png"
-                             class="card-img-top rounded-0" alt="Angular pro sidebar">
-                        <div class="card-body text-center">
-                            <h6 class="card-title">Code Sharing Platform</h6>
-                            <a href="https://github.com/dan-koller/Spring-Code-Sharing-Platform" target="_blank"
-                               class="btn btn-primary btn-sm">Github</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="card rounded-0 p-0 shadow-sm">
-                        <img src="https://dan-koller.github.io/src/images/api-coding.jpg"
-                             class="card-img-top rounded-0" alt="Angular pro sidebar">
-                        <div class="card-body text-center">
-                            <h6 class="card-title">Accounting Service</h6>
-                            <a href="https://github.com/dan-koller/Spring-Accounting-Service" target="_blank"
-                               class="btn btn-primary btn-sm">Github</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="card rounded-0 p-0 shadow-sm">
-                        <img src="https://raw.githubusercontent.com/dan-koller/Flask-Weather-App/main/res/weather-app-screenshot.png"
-                             class="card-img-top rounded-0" alt="Angular pro sidebar">
-                        <div class="card-body text-center">
-                            <h6 class="card-title">Weather app</h6>
-                            <a href="https://github.com/dan-koller/Flask-Weather-App" target="_blank"
-                               class="btn btn-primary btn-sm">Github</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
-
             <footer class="text-center">
                 <div class="mb-2">
                     <small id="copyright-footer">
