--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<!--Add a navbar-->
+<!--Login navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a href="/web/" class="navbar-brand"><b>Anti Fraud System</b></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -50,7 +50,7 @@
             <div class="nav-item dropdown">
                 <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle mr-4">Login</a>
                 <div class="dropdown-menu action-form">
-                    <form action="/web/success" method="post">
+                    <form action="/login" method="post">
                         <p class="hint-text">Sign in with your social media account</p>
                         <div class="form-group social-btn clearfix">
                             <a href="#" class="btn btn-secondary facebook-btn float-left"><i class="fa fa-facebook"></i> Facebook</a>
@@ -58,10 +58,10 @@
                         </div>
                         <div class="or-seperator"><b>or</b></div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Username" required="required">
+                            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Password" required="required">
+                            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
                         </div>
                         <input type="submit" class="btn btn-primary btn-block" value="Login">
                         <div class="text-center mt-2">
@@ -76,16 +76,16 @@
                     <form action="/web/success" method="post">
                         <p class="hint-text">Fill in this form to create your account!</p>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="name" placeholder="Your name" required="required">
+                            <input type="text" class="form-control" id="signup-name" placeholder="Your name" required="required">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="username" placeholder="Username" required="required">
+                            <input type="text" class="form-control" id="signup-username" placeholder="Username" required="required">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="password" placeholder="Password" required="required">
+                            <input type="password" class="form-control" id="signup-password" placeholder="Password" required="required">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="confirm_password" placeholder="Confirm Password" required="required">
+                            <input type="password" class="form-control" id="signup-confirm_password" placeholder="Confirm Password" required="required">
                         </div>
                         <div class="form-group">
                             <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms &amp; Conditions</a></label>
@@ -98,6 +98,7 @@
     </div>
 </nav>
 
+<!--Main content-->
 <div class="page-wrapper chiller-theme toggled">
     <main class="page-content">
         <div class="container-fluid">
@@ -182,6 +183,7 @@
 
 <!--Custom scripts-->
 <script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/post-login-form.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
 
 </body>
