--- a/src/main/resources/templates/merchant.html
+++ b/src/main/resources/templates/merchant.html
@@ -14,7 +14,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<!--Navbar-->
+<!--Logout navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a href="/web/" class="navbar-brand"><b>Anti Fraud System</b></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -47,42 +47,7 @@
         </form>
         <div class="navbar-nav ml-auto action-buttons">
             <div class="nav-item dropdown">
-                <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle mr-4">Logout</a>
-                <div class="dropdown-menu action-form">
-                    <form action="/web/success" method="post">
-                        <!--TODO: Add logout form-->
-                    </form>
-                </div>
-            </div>
-            <div class="nav-item dropdown">
-                <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn"
-                   aria-expanded="false">Sign up</a>
-                <div class="dropdown-menu action-form">
-                    <form action="/web/success" method="post">
-                        <p class="hint-text">Fill in this form to create your account!</p>
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="name" placeholder="Your name"
-                                   required="required">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="username" placeholder="Username"
-                                   required="required">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" id="password" placeholder="Password"
-                                   required="required">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" id="confirm_password"
-                                   placeholder="Confirm Password" required="required">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a
-                                    href="#">Terms &amp; Conditions</a></label>
-                        </div>
-                        <input type="submit" class="btn btn-primary btn-block" value="Sign up" onclick=send()>
-                    </form>
-                </div>
+                <a th:href="@{/logout}" class="nav-link dropdown-toggle mr-4">Logout</a>
             </div>
         </div>
     </div>
