Added admin actions
Basic administrative tasks are now fully functional.Only /list view needs to be implement
ed

--- a/src/main/resources/templates/admin/delete-user.html
+++ b/src/main/resources/templates/admin/delete-user.html
@@ -221,30 +221,18 @@
     <!-- sidebar-wrapper  -->
     <main class="page-content">
         <div class="container-fluid">
-            <h2>Administration</h2>
+            <h2>Delete an existing user</h2>
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
-                    <div class="alert alert-success" role="alert">
-                        <h4 class="alert-heading">App Status</h4>
-                        <p>There are currently no events or notifications that need your attention. Have a nice day!</p>
-                        <a href="#" target="_blank"
-                           class="btn btn-sm btn-primary mr-2">Show events</a>
-                        <a href="#" target="_blank"
-                           class="btn btn-sm btn-success">OK</a>
-                    </div>
-                </div>
-                <div class="form-group col-md-12">
-                    <p id="user-greeting">Hello there!</p>
-                    <p>What would you like to do?</p>
-                    <ul>
-                        <!--TODO: Update hrefs to link to the correct site-->
-                        <li><a href="/web/admin/new-user">Add a new user</a></li>
-                        <li><a href="/web/admin/delete-user">Remove an existing user</a></li>
-                        <li><a href="/web/list">View a list of active users</a></li>
-                        <li><a href="/web/admin/update-role">Update the role of an existing user</a></li>
-                        <li><a href="/web/admin/update-access">Update the access level of an existing user</a></li>
-                    </ul>
+                    <form action="/web/admin/delete-user" method="post">
+                        <p class="hint-text">Please enter the username of the user you want to remove from the system.</p>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="delete-username" placeholder="Your name"
+                                   required="required">
+                        </div>
+                        <input type="submit" class="btn btn-danger btn-block" value="Delete user" onclick=deleteUser()>
+                    </form>
                 </div>
             </div>
             <footer class="text-center">
@@ -266,8 +254,9 @@
 <script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-
 <script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
+
+<script type="text/javascript" th:src="@{/scripts/admin/post-delete-user.js}"></script>
 
 </body>
 </html>
