--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,18 +50,23 @@
             <div class="nav-item dropdown">
                 <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle mr-4">Login</a>
                 <div class="dropdown-menu action-form">
+                    <!--Change form action to thymeleaf action-->
                     <form action="/login" method="post">
                         <p class="hint-text">Sign in with your social media account</p>
                         <div class="form-group social-btn clearfix">
-                            <a href="#" class="btn btn-secondary facebook-btn float-left"><i class="fa fa-facebook"></i> Facebook</a>
-                            <a href="#" class="btn btn-secondary twitter-btn float-right"><i class="fa fa-twitter"></i> Twitter</a>
+                            <a href="#" class="btn btn-secondary facebook-btn float-left"><i class="fa fa-facebook"></i>
+                                Facebook</a>
+                            <a href="#" class="btn btn-secondary twitter-btn float-right"><i class="fa fa-twitter"></i>
+                                Twitter</a>
                         </div>
                         <div class="or-seperator"><b>or</b></div>
                         <div class="form-group">
-                            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
+                            <input type="text" id="username" name="username" class="form-control" placeholder="Username"
+                                   required="" autofocus="">
                         </div>
                         <div class="form-group">
-                            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+                            <input type="password" id="password" name="password" class="form-control"
+                                   placeholder="Password" required="">
                         </div>
                         <input type="submit" class="btn btn-primary btn-block" value="Login">
                         <div class="text-center mt-2">
@@ -71,24 +76,31 @@
                 </div>
             </div>
             <div class="nav-item dropdown">
-                <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="false">Sign up</a>
+                <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn"
+                   aria-expanded="false">Sign up</a>
                 <div class="dropdown-menu action-form">
-                    <form action="/web/success" method="post">
+                    <!--TODO: Remove success url. Redirect to landing page and add an alert via javascript-->
+                    <form action="" method="post">
                         <p class="hint-text">Fill in this form to create your account!</p>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="signup-name" placeholder="Your name" required="required">
+                            <input type="text" class="form-control" id="signup-name" placeholder="Your name"
+                                   required="required">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="signup-username" placeholder="Username" required="required">
+                            <input type="text" class="form-control" id="signup-username" placeholder="Username"
+                                   required="required">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="signup-password" placeholder="Password" required="required">
+                            <input type="password" class="form-control" id="signup-password" placeholder="Password"
+                                   required="required">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="signup-confirm_password" placeholder="Confirm Password" required="required">
+                            <input type="password" class="form-control" id="signup-confirm_password"
+                                   placeholder="Confirm Password" required="required">
                         </div>
                         <div class="form-group">
-                            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms &amp; Conditions</a></label>
+                            <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a
+                                    href="#">Terms &amp; Conditions</a></label>
                         </div>
                         <input type="submit" class="btn btn-primary btn-block" value="Sign up" onclick=send()>
                     </form>
